--- a/index.html
+++ b/index.html
@@ -211,5 +211,6 @@
         <p class="text-gray-300">&copy; 2026 Portfolio | Développeur Web | Passion pour l'innovation! 🚀</p>
     </footer>
 
+    <script src="script.js" defer></script>
 </body>
 </html>
