feat: add GitHub links to project cards

--- a/index.html
+++ b/index.html
@@ -86,9 +86,8 @@
                         <span class="text-4xl block mb-2">🎓</span>
                         <p class="font-bold text-gray-700">Bachelor 2</p>
                     </div>
-                    <div class="bg-white p-8 rounded-lg shadow-lg border-t-4 border-red-600 text-center">
-                        <span class="text-4xl block mb-2">💡</span>
-                        <p class="font-bold text-gray-700">Innovant</p>
+                    <div class="bg-white p-8 rounded-lg shadow-lg border-t-4 border-red-600 text-center flex items-center justify-center">
+                        <img src="asset/ynov.webp" alt="YNOV" class="w-full h-auto object-contain">
                     </div>
                     <div class="bg-white p-8 rounded-lg shadow-lg border-t-4 border-red-600 text-center">
                         <span class="text-4xl block mb-2">🚀</span>
@@ -116,8 +115,11 @@
                     <div class="flex flex-wrap gap-2 mb-6">
                         <span class="bg-gray-100 text-red-600 px-4 py-2 rounded-full text-sm font-bold">Python</span>
                     </div>
-                    <div class="flex gap-4">
-                        <a href="#" class="flex-1 bg-gray-900 text-white py-2 px-4 rounded text-center font-bold hover:bg-red-600 transition-colors">Voir</a>
+                    <div class="flex gap-4 justify-end">
+                        <a href="https://github.com/LoicAND/SurviveIsland" class="bg-gray-900 text-white py-3 px-8 text-center font-bold hover:bg-red-600 transition-all uppercase tracking-wider relative overflow-hidden group" target="_blank" style="clip-path: polygon(8% 0%, 100% 0%, 92% 100%, 0% 100%);">
+                            <span class="relative z-10">Voir</span>
+                            <div class="absolute inset-0 bg-red-600 transform -translate-x-full group-hover:translate-x-0 transition-transform duration-300"></div>
+                        </a>
                     </div>
                 </div>
 
@@ -130,9 +132,11 @@
                     <div class="flex flex-wrap gap-2 mb-6">
                         <span class="bg-gray-100 text-red-600 px-4 py-2 rounded-full text-sm font-bold">Java</span>
                     </div>
-                    <div class="flex gap-4">
-                        <a href="#" class="flex-1 bg-gray-900 text-white py-2 px-4 rounded text-center font-bold hover:bg-red-600 transition-colors">Voir</a>
-                        <a href="#" class="flex-1 bg-gray-900 text-white py-2 px-4 rounded text-center font-bold hover:bg-red-600 transition-colors">Code</a>
+                    <div class="flex gap-4 justify-end">
+                        <a href="https://github.com/LoicAND/Uber_Eats" class="bg-gray-900 text-white py-3 px-8 text-center font-bold hover:bg-red-600 transition-all uppercase tracking-wider relative overflow-hidden group" target="_blank" style="clip-path: polygon(8% 0%, 100% 0%, 92% 100%, 0% 100%);">
+                            <span class="relative z-10">Voir</span>
+                            <div class="absolute inset-0 bg-red-600 transform -translate-x-full group-hover:translate-x-0 transition-transform duration-300"></div>
+                        </a>
                     </div>
                 </div>
 
@@ -149,9 +153,11 @@
                         <span class="bg-gray-100 text-red-600 px-4 py-2 rounded-full text-sm font-bold">Go</span>
                         <span class="bg-gray-100 text-red-600 px-4 py-2 rounded-full text-sm font-bold">Docker</span>
                     </div>
-                    <div class="flex gap-4">
-                        <a href="https://github.com/Joshua31400/SportHub-Forum" class="flex-1 bg-gray-900 text-white py-2 px-4 rounded text-center font-bold hover:bg-red-600 transition-colors" target="_blank">Voir</a>
-                        <a href="#" class="flex-1 bg-gray-900 text-white py-2 px-4 rounded text-center font-bold hover:bg-red-600 transition-colors">Code</a>
+                    <div class="flex gap-4 justify-end">
+                        <a href="https://github.com/Joshua31400/SportHub-Forum" class="bg-gray-900 text-white py-3 px-8 text-center font-bold hover:bg-red-600 transition-all uppercase tracking-wider relative overflow-hidden group" target="_blank" style="clip-path: polygon(8% 0%, 100% 0%, 92% 100%, 0% 100%);">
+                            <span class="relative z-10">Voir</span>
+                            <div class="absolute inset-0 bg-red-600 transform -translate-x-full group-hover:translate-x-0 transition-transform duration-300"></div>
+                        </a>
                     </div>
                 </div>
 
