fix(index): modify colour yellow to red

--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@
         <div class="max-w-6xl mx-auto">
             <h2 class="text-5xl font-black text-center mb-16 relative pb-6">
                 Mes Compétences
-                <span class="absolute bottom-0 left-1/2 -translate-x-1/2 w-24 h-1 bg-yellow-400 rounded"></span>
+                <span class="absolute bottom-0 left-1/2 -translate-x-1/2 w-24 h-1 bg-red-600 rounded"></span>
             </h2>
             <div class="grid md:grid-cols-3 gap-8">
                 <div class="bg-white/5 border border-red-600/30 p-8 rounded-lg">
-                    <h3 class="text-xl font-bold text-yellow-400 mb-6">Frontend</h3>
+                    <h3 class="text-xl font-bold text-red-600 mb-6">Frontend</h3>
                     <ul class="space-y-3">
                         <li class="text-white">→ HTML</li>
                         <li class="text-white">→ CSS</li>
@@ -182,7 +182,7 @@
                     </ul>
                 </div>
                 <div class="bg-white/5 border border-red-600/30 p-8 rounded-lg">
-                    <h3 class="text-xl font-bold text-yellow-400 mb-6">Backend</h3>
+                    <h3 class="text-xl font-bold text-red-600 mb-6">Backend</h3>
                     <ul class="space-y-3">
                         <li class="text-white">→ Python</li>
                         <li class="text-white">→ Java</li>
@@ -192,7 +192,7 @@
                     </ul>
                 </div>
                 <div class="bg-white/5 border border-red-600/30 p-8 rounded-lg">
-                    <h3 class="text-xl font-bold text-yellow-400 mb-6">Tools & DevOps</h3>
+                    <h3 class="text-xl font-bold text-red-600 mb-6">Tools & DevOps</h3>
                     <ul class="space-y-3">
                         <li class="text-white">→ Docker</li>
                         <li class="text-white">→ Git/GitHub</li>
