--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="loadingScreen" class="fixed inset-0 z-50 flex items-center justify-center bg-black transition-opacity duration-500">
         <div class="text-center">
             <h1 class="text-5xl font-black text-white mb-8">🏁</h1>
-            <div class="flex gap-5 justify-center mb-8" aria-label="Feux de départ">
+            <div class="flex gap-5 justify-center mb-8" role="group" aria-label="Feux de départ">
                 <div class="traffic-light w-8 h-8 rounded-full bg-gray-700 transition-all duration-200"></div>
                 <div class="traffic-light w-8 h-8 rounded-full bg-gray-700 transition-all duration-200"></div>
                 <div class="traffic-light w-8 h-8 rounded-full bg-gray-700 transition-all duration-200"></div>
