--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="traffic-light w-8 h-8 rounded-full bg-gray-700 transition-all duration-200"></div>
                 <div class="traffic-light w-8 h-8 rounded-full bg-gray-700 transition-all duration-200"></div>
             </div>
-            <p class="text-red-600 font-bold text-lg animate-pulse">Démarrage en cours...</p>
+            <p class="text-white font-bold text-lg animate-pulse">Démarrage en cours...</p>
         </div>
     </div>
     <nav class="bg-gradient-to-r from-gray-900 to-black sticky top-0 z-50 shadow-lg shadow-red-600/30">
